Iplemented hard delete user flow and active session flow in security page
